--- a/dataviz/clocks/index.html
+++ b/dataviz/clocks/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {padding: 0; margin: 0; background-color: rgb(50, 50, 50); color:white; font-family: Arial, Helvetica, sans-serif;} </style>
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
   </head>
@@ -20,7 +20,7 @@
         I wanted to convey the part-whole relationship between these different units of time. I thought that it would be cool to have the hours be hexagons, then have the minutes be paralellograms (because you can fit 12 paralelograms in a hexagon) and then have the seconds be triangles (because you can build a paralellogram out of triangles). I also tried to convey this relationship through color. As the number of minutes approaches 60, the color of the paralellograms approaches the color of the corresponding hour hexagon that will be created next. Similarly, the trianges corresponding to seconds are drawn in the color of the next minute paralellogram that will be drawn.
     </p>
     <p> Screenshot at 10:31 : </p>
-    <img src="https://avawood.github.io/dataviz/clocks/clocks-screenshot-cropped.png">
+    <img src="https://avawood.github.io/dataviz/clocks/clocks-screenshot-cropped.png" width="700">
     <p> The running clock: </p>
   </body>
 </html>
