--- a/dataviz/clocks/index.html
+++ b/dataviz/clocks/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0; background-color: rgb(50, 50, 50); color:white; font-family: Arial, Helvetica, sans-serif;} </style>
+    <style> body {padding: 0; margin: 5%; background-color: rgb(50, 50, 50); color:white; font-family: Arial, Helvetica, sans-serif;} </style>
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
   </head>
