--- a/dataviz/clocks/index.html
+++ b/dataviz/clocks/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
-    <style> body {padding: 0; margin: 5%; background-color: rgb(50, 50, 50); color:white; font-family: Arial, Helvetica, sans-serif;} </style>
+    <title>Ava's Geometric Clock</title>
+    <style> body {padding: 0; margin: 5% 40% 5% 5%; background-color: rgb(50, 50, 50); color:white; font-family: Arial, Helvetica, sans-serif;} </style>
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
   </head>
